tests/misc/config/cfg_syntax/tcfg_endiferr.nim
discard """
  description: "tests config parsing error, see corresponding '.nim.cfg' file"
  errormsg: "expected '@end'"
  file: "tcfg_endiferr.nim.cfg"
"""